# qiskit-noise-learning

./: .gitignore  .pre-commit-config.yaml  BOOTSTRAPPING.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: nightly.yml  test_notebooks.yaml  test_package.yaml
docs/: experiment_demo.ipynb  latex_str_demo.ipynb  latex_symbols_demo.ipynb  model_redesign_demo.ipynb  noise_learner_demo.ipynb  qnl_fitter_comparison_3.py  stages_demo.ipynb  workflow_demo.ipynb  workflow_demo_1q.ipynb  workflow_demo_2cz.ipynb  workflow_demo_full.ipynb  workflow_demo_full_rank.ipynb  workflow_demo_full_rank_2q.ipynb  workflow_demo_full_rank_3q.ipynb  workflow_demo_full_rank_no_sim.ipynb  workflow_demo_full_rank_no_sim_high_weight.ipynb  workflow_demo_full_rank_no_sim_spam.ipynb  workflow_demo_full_rank_no_spam.ipynb  workflow_demo_full_rank_spam.ipynb
qiskit_noise_learning/: __init__.py  optionals.py  qnl_test_utils.py
qiskit_noise_learning/aer_executor/: __init__.py  aer_executor.py  broadcast_sample.py  decompose_rx_pass.py  fake_noise.py  inline.py  insert_noise_pass.py  run_quantum_program.py
qiskit_noise_learning/analysis/: __init__.py  analysis_pipeline.py  average_observables.py  bootstrap.py  compute_observables.py  curve_fit_observables.py  fit.py  flip_post_select.py  legacy.py  model_propagation.py  model_solve.py  nnls_solve.py  pauli_lindblad_maps.py  post_select.py  symmetrize.py  utils.py  zero_post_select.py
qiskit_noise_learning/circuit_generator/: __init__.py  circuit_generator.py  data_mapper_model_v1.py  executor_circuit_generator.py  executor_data_mapper.py
qiskit_noise_learning/data/: __init__.py  averaged_data.py  leveled_data.py  model_data.py  observable_data.py  raw_data.py  xarray_utils.py
qiskit_noise_learning/experiment_builder/: __init__.py  experiment.py  experiment_builder.py  experiment_generators.py  stage.py  utils.py
qiskit_noise_learning/gate_sets/: __init__.py  gate.py  gate_set.py  model_gate.py  model_gate_set.py  qiskit_gate.py  qiskit_gate_set.py
qiskit_noise_learning/math/: __init__.py  indexed_matrix.py  indexed_space.py  indexed_vector.py  linear_map.py  parameter_space.py  sequence_map.py
qiskit_noise_learning/models/: __init__.py  complete_fidelity_model.py  composed_fidelity_model.py  fidelity_index_space.py  fidelity_model.py  identity_fidelity_model.py  log_fidelity_space.py  log_path_map.py  mixed_fidelity_model.py  pauli_lindblad_model.py  utils.py
qiskit_noise_learning/noise_learner/: __init__.py  learning_options.py  noise_learner.py  noise_learner_job.py  noise_learner_result.py
qiskit_noise_learning/sequences/: __init__.py  apply_gate.py  base_pattern.py  base_sequence.py  fidelity_index.py  instruction.py  path.py  (+5 more)
test/: conftest.py
tools/: verify_headers.py
(+151 files in other folders)
